samples/_failures_safe/1761191585_52eab9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_186486cb.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_186486cb.c:165:13: error: expected declaration or statement at end of input
  165 |             result -= right;
      |             ^~~~~~
./samples/SAFE/__tmp_186486cb.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_186486cb.c:165:13: error: expected declaration or statement at end of input
